<resources>
    <string name="app_name">PantallaClases7</string>
    <string name="aceptar">aceptar</string>
    <string name="elfo">elfo</string>
    <string name="guerrero">guerrero</string>
    <string name="ladron">ladron</string>
    <string name="mago">mago</string>
    <string name="enano">enano</string>
    <string name="hombre">hombre</string>
    <string name="hobbit">hobbit</string>
    <string name="orco">orco</string>
    <string name="aceptar2">aceptar2</string>
    <string name="todo">TODO</string>
    <string name="arquero">arquero</string>
</resources>