<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/ladron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/ladron"
        app:layout_constraintBottom_toTopOf="@+id/guerrero"
        app:layout_constraintEnd_toStartOf="@+id/mago"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/guerrero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="44dp"
        android:text="@string/guerrero"
        app:layout_constraintBottom_toTopOf="@+id/aceptar"
        app:layout_constraintEnd_toStartOf="@+id/arquero"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="48dp"
        android:text="@string/mago"
        app:layout_constraintBottom_toTopOf="@+id/arquero"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/arquero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="44dp"
        android:text="@string/arquero"
        app:layout_constraintBottom_toTopOf="@+id/aceptar"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="219dp"
        android:layout_height="210dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/aceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>